--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <button id="dec">DECODE</button>
       <textarea class="decode-output"></textarea>
     </div>
-
+    <div class="version">V.1.1</div>
   </div>
 
 
@@ -57,6 +57,10 @@
     margin-top: 15px;
     font-size: 16px;
   }
+  .version {
+    text-align: right;
+    padding: 10px;
+}
 </style>
 
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
