--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <div class="contener">
     <h1>Darkxee Code</h1>
-    <p>Convert text to Darkxee Code. Ex. Darkxee =&gt; IvIXviiiXiXxivVV </p>
+    <p>Convert text to Darkxee Code. Ex. Darkxee =&gt; IvIXviiiXiXxivVV <br/>English only !!</p>
     <div class="col50">
       <input type="text" id="encode">
       <button id="gen">ENCODE</button>
