--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
   p {
     padding-left: 15px;
   }
+  input {
+    width: 100%;
+  }
+
+  button {
+      float: right;
+  }
 
   .col50 {
     width: 50%;
